# autobib

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
demo/: README.md  easybib.config  paper.tex
src/autobib/: __init__.py  __main__.py  cli.py
src/autobib.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/easybib/: __init__.py  __main__.py  api.py  cli.py  conversions.py  core.py
tests/: test_cli.py  test_core.py  test_fetch.py  test_integration.py
