[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "autobib"
version = "0.1.0"
description = "Automatically fetch BibTeX entries from INSPIRE and ADS for LaTeX projects"
requires-python = ">=3.9"
dependencies = [
    "requests",
]

[project.scripts]
autobib = "autobib.cli:main"
